# presidio-hardened-opcua

./: .gitignore  CLAUDE.md  MAINTENANCE.md  PRESIDIO-REQ.md  README.md  SECURITY.md  main.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
src/presidio_opcua/: __init__.py  anomaly.py  client.py  dep_check.py  sanitization.py  security.py  server.py
tests/: conftest.py  test_anomaly.py  test_client.py  test_dep_check.py  test_init.py  test_sanitization.py  test_security.py  test_server.py
